n8n fix and traefik add

--- a/n8n/.env
+++ b/n8n/.env
@@ -1,6 +1,15 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=somepassword
-POSTGRES_DB=n8n
+# DOMAIN_NAME and SUBDOMAIN together determine where n8n will be reachable from
+# The top level domain to serve from
+DOMAIN_NAME=localhost
 
-POSTGRES_NON_ROOT_USER=someone
-POSTGRES_NON_ROOT_PASSWORD=somepassword
+# The subdomain to serve from
+SUBDOMAIN=n8n
+
+# The above example serve n8n at: https://n8n.example.com
+
+# Optional timezone to set which gets used by Cron and other scheduling nodes
+# New York is the default value if not set
+GENERIC_TIMEZONE=Europe/Berlin
+
+# The email address to use for the TLS/SSL certificate creation
+SSL_EMAIL=ursin.saluz@gmail.com
