--- a/homepage/compose.yml
+++ b/homepage/compose.yml
@@ -3,11 +3,17 @@ services:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
     environment:
-      HOMEPAGE_ALLOWED_HOSTS: gethomepage.dev # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
+      HOMEPAGE_ALLOWED_HOSTS: gethomepage.dev,homepage.localhost:3030,127.0.0.1:3000,127.0.0.1:3030 # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
       PUID: 1000 # optional, your user id
       PGID: 1000 # optional, your group id
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.homepage.rule=Host(`homepage.localhost`)
+      - "traefik.http.routers.homepage.entrypoints=websecure"
+      - "traefik.http.routers.homepage.tls.certresolver=lets-encrypt"
+      - "traefik.http.services.homepage.loadbalancer.server.port=3000"
     ports:
-      - 3000:3000
+      - 127.0.0.1:3030:3000
     volumes:
       - ./config:/app/config # Make sure your local config directory exists
       - /var/run/docker.sock:/var/run/docker.sock:ro # optional, for docker integrations
