openproject and trafik config for most projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /homepage/config/
+/openproject/control/
+/appsmith/stacks/
+/n8n/local-files/
+/stirlingpdf/StirlingPDF/
+/traefik/shared/
+/traefik/config/
+/vespa/myapp/
