--- a/portainer/compose.yml
+++ b/portainer/compose.yml
@@ -2,11 +2,20 @@ services:
   portainer:
     image: portainer/portainer-ce:latest
     container_name: portainer
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.portainer.rule=Host(`portainer.localhost`)"
+      - "traefik.http.routers.portainer.entrypoints=websecure"
+      - "traefik.http.services.portainer.loadbalancer.server.port=9443"
+      - "traefik.http.routers.portainer.tls.certresolver=lets-encrypt"
     ports:
+      - "8000:8000"
+      - "9000:9000"
       - "9443:9443"
     volumes:
       - data:/data
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
+    command: --http-enabled
 volumes:
   data:
