--- a/it-tools/docker-compose.yaml
+++ b/it-tools/docker-compose.yaml
@@ -4,5 +4,11 @@ services:
      image: corentinth/it-tools
      container_name: it-tools
      ports:
-         - "8080:80"
+         - "8060:80"
      restart: unless-stopped
+     labels:
+      - traefik.enable=true
+      - traefik.http.routers.it-tools.rule=Host(`ittools.localhost`)
+      - "traefik.http.routers.it-tools.entrypoints=websecure"
+      - "traefik.http.routers.it-tools.tls.certresolver=lets-encrypt"
+      - "traefik.http.services.it-tools.loadbalancer.server.port=8060"
