--- a/hoppscotch/.env
+++ b/hoppscotch/.env
@@ -1,6 +1,6 @@
 #-----------------------Backend Config------------------------------#
 # Prisma Config
-DATABASE_URL=postgresql://username:password@url:5432/dbname # or replace with your database URL
+DATABASE_URL=postgresql://postgres:password@postgres:5432/postgres # or replace with your database URL
 
 # (Optional) By default, the AIO container (when in subpath access mode) exposes the endpoint on port 80. Use this setting to specify a different port if needed.
 HOPP_AIO_ALTERNATE_PORT=80
@@ -23,7 +23,7 @@ ALLOW_SECURE_COOKIES=true
 DATA_ENCRYPTION_KEY=********************************
 
 # Hoppscotch App Domain Config
-REDIRECT_URL=http://localhost:3000
+REDIRECT_URL=http://hopscotch.localhost:3020
 # Whitelisted origins for the Hoppscotch App.
 # This list controls which origins can interact with the app through cross-origin comms.
 # - localhost ports (3170, 3000, 3100): app, backend, development servers and services
@@ -31,7 +31,7 @@ REDIRECT_URL=http://localhost:3000
 #   NOTE: `3200` here refers to the bundle server (port 3200) that provides the bundles,
 #   NOT where the app runs. The app itself uses the `app://` protocol with dynamic
 #   bundle names like `app://{bundle-name}/`
-WHITELISTED_ORIGINS=http://localhost:3170,http://localhost:3000,http://localhost:3100,app://localhost_3200,app://hoppscotch
+WHITELISTED_ORIGINS=http://localhost:3170,http://localhost:3020,http://hoppscotch.localhost:3020,http://localhost:3100,app://localhost_3200,app://hoppscotch,hoppscotch.localhost:3020
 VITE_ALLOWED_AUTH_PROVIDERS=GOOGLE,GITHUB,MICROSOFT,EMAIL
 
 # Google Auth Config
@@ -74,18 +74,18 @@ RATE_LIMIT_MAX=100 # Max requests per IP
 #-----------------------Frontend Config------------------------------#
 
 # Base URLs
-VITE_BASE_URL=http://localhost:3000
-VITE_SHORTCODE_BASE_URL=http://localhost:3000
-VITE_ADMIN_URL=http://localhost:3100
+VITE_BASE_URL=http://hopscotch.localhost:3020
+VITE_SHORTCODE_BASE_URL=http://hopscotch.localhost:3020
+VITE_ADMIN_URL=http://hopscotch.localhost:3100
 
 # Backend URLs
-VITE_BACKEND_GQL_URL=http://localhost:3170/graphql
-VITE_BACKEND_WS_URL=wss://localhost:3170/graphql
-VITE_BACKEND_API_URL=http://localhost:3170/v1
+VITE_BACKEND_GQL_URL=http://hopscotch.localhost:3170/graphql
+VITE_BACKEND_WS_URL=wss://hopscotch.localhost:3170/graphql
+VITE_BACKEND_API_URL=http://hopscotch.localhost:3170/v1
 
 # Terms Of Service And Privacy Policy Links (Optional)
 VITE_APP_TOS_LINK=https://docs.hoppscotch.io/support/terms
 VITE_APP_PRIVACY_POLICY_LINK=https://docs.hoppscotch.io/support/privacy
 
 # Set to `true` for subpath based access
-ENABLE_SUBPATH_BASED_ACCESS=false
+ENABLE_SUBPATH_BASED_ACCESS=true
