--- a/nocodb/docker-compose.yml
+++ b/nocodb/docker-compose.yml
@@ -6,12 +6,19 @@ services:
         condition: service_healthy
     environment: 
       NC_DB: "pg://root_db:5432?u=postgres&p=password&d=root_db"
+      NC_PUBLIC_URL: "https://nocodb.localhost:8050"
     image: "nocodb/nocodb:latest"
     ports: 
-      - "8080:8080"
+      - "8050:8080"
     restart: always
     volumes: 
-      - "nc_data:/usr/app/data"
+      - "./nc_data:/usr/app/data"
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.nocodb.rule=Host(`nocodb.localhost`)
+      - "traefik.http.routers.nocodb.entrypoints=websecure"
+      - "traefik.http.routers.nocodb.tls.certresolver=lets-encrypt"
+      - "traefik.http.services.nocodb.loadbalancer.server.port=8050"
   root_db: 
     environment: 
       POSTGRES_DB: root_db
@@ -25,7 +32,4 @@ services:
     image: postgres:16.6
     restart: always
     volumes: 
-      - "db_data:/var/lib/postgresql/data"
-volumes: 
-  db_data: {}
-  nc_data: {}
+      - "./db_data:/var/lib/postgresql/data"
