--- a/nocodb/docker-compose.yml
+++ b/nocodb/docker-compose.yml
@@ -1,35 +1,53 @@
-version: '2.1'
-services: 
-  nocodb: 
-    depends_on: 
-      root_db: 
-        condition: service_healthy
-    environment: 
-      NC_DB: "pg://root_db:5432?u=postgres&p=password&d=root_db"
-      NC_PUBLIC_URL: "https://nocodb.localhost:8050"
+services:
+  nocodb:
+    container_name: nocodb
     image: "nocodb/nocodb:latest"
-    ports: 
-      - "8050:8080"
     restart: always
-    volumes: 
-      - "./nc_data:/usr/app/data"
+    environment:
+      - "NC_DB=pg://nocodb-db:5432?u=${DATABASE_USER}&p=${DATABASE_PW}&d=${DATABASE_NAME}"
+      - "NC_PUBLIC_URL=https://nocodb.${DOMAINNAME}"
+      - NC_DISABLE_TELE=true
+    volumes:
+      - "nocodb-data:/usr/app/data"
+    depends_on:
+      - nocodb-db
     labels:
-      - traefik.enable=true
-      - traefik.http.routers.nocodb.rule=Host(`nocodb.localhost`)
+      # --- Traefik Labels ---
+      - "traefik.enable=true"
+      - "traefik.http.routers.nocodb.rule=Host(`nocodb.${DOMAINNAME}`)"
       - "traefik.http.routers.nocodb.entrypoints=websecure"
-      - "traefik.http.routers.nocodb.tls.certresolver=lets-encrypt"
-      - "traefik.http.services.nocodb.loadbalancer.server.port=8050"
-  root_db: 
-    environment: 
-      POSTGRES_DB: root_db
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: postgres
-    healthcheck: 
-      interval: 10s
-      retries: 10
-      test: "pg_isready -U \"$$POSTGRES_USER\" -d \"$$POSTGRES_DB\""
-      timeout: 2s
-    image: postgres:16.6
+      - "traefik.http.routers.nocodb.tls=true"
+      - "traefik.http.services.nocodb.loadbalancer.server.port=8080"
+      - "traefik.docker.network=traefik"
+    networks:
+      - traefik
+
+  nocodb-db:
+    container_name: nocodb-db
+    image: "postgres:12.17-alpine"
     restart: always
-    volumes: 
-      - "./db_data:/var/lib/postgresql/data"
+    environment:
+      POSTGRES_DB: "${DATABASE_NAME}"
+      POSTGRES_PASSWORD: "${DATABASE_PW}"
+      POSTGRES_USER: "${DATABASE_USER}"
+    volumes:
+      - "nocodb-db:/var/lib/postgresql/data"
+    healthcheck:
+      test: "pg_isready -U ${DATABASE_USER} -d ${DATABASE_NAME}"
+      interval: 10s
+      timeout: 2s
+      retries: 10
+    networks:
+      - traefik
+
+# Define the shared network as external
+networks:
+  traefik:
+    external: true
+
+# Define volumes used by this stack
+volumes:
+  nocodb-data:
+    name: nocodb-data
+  nocodb-db:
+    name: nocodb-db
